source/webapp/sites/all/themes/checkbook3/css/global.css
/* ... */
.dataTables_wrapper th.number, .outerTable th.number{
    text-align: right;
}
.dataTables_wrapper th.text, .outerTable th.text{
    text-align: left;
}
table.dataTable th.sorting span, table.dataTable th.sorting_asc span, table.dataTable th.sorting_desc span {
    padding-left:15px;
    display:block;
    cursor: pointer;
    float:left;
}
table.dataTable th.sorting span:hover, table.dataTable th.sorting_asc span:hover, table.dataTable th.sorting_desc span:hover {
    text-decoration:underline;
}
table.dataTable th.sorting_desc span {
    background: url("../images/arrow-asc.png") no-repeat scroll left center transparent;
}
table.dataTable th.sorting_asc span {
    background: url("../images/arrow-desc.png") no-repeat scroll left center transparent;
}
.dataTable th:first-child div {
    margin: 8px 0 8px 15px;
}
.dataTable td.text:first-child div {
    margin: 13px 0 13px 15px;
}
.dataTable th.text-left-padding{
    text-align:center;
 }
.dataTable td.text-left-padding div{
    margin: 13px 0 13px 20px;
}

.dataTables_wrapper td, .sub-table td{
    vertical-align: middle;
    text-transform: uppercase;
}
.dataTable th div {
    margin: 8px 0 8px 5px;
}
.dataTable th.text div {
    display:block;
    float:left;
    text-align:center;
}
.dataTable th.number div {
    display:block;
    float:right;
    text-align:center;
}
.dataTable th.number-center div {
    display:block;
    text-align:center;
}
.dataTable td div {
    margin: 13px 0 13px 0px;
}
td.text div {
    float: left;
    text-align: left;
}

td.number div {
    float: right;
    text-align: right;
}
td.number-center {
    text-align: center;
}
table.dataTable tr.even,
table.outerTable.ma-history tr.even{
    background-color: #f8f8f8;
    border:none;
}
table.dataTable tr.odd,
table.outerTable.ma-history tr.odd {
    background-color: #fff;
    border:none;
}
table.outerTable.ma-history th:first-child div,
table.outerTable.ma-history td:first-child div{margin-left:10px;}
.tableFooter {
    float:right;
    clear:both;
    padding-right:5px;
}
.plus-or{margin:0px 12px;}

th.recdate div{
    margin-left: 0;
}
td.recdate div{
    float:right;
}
th.number-left div,
td.number-left div{
    margin-left: 15px;
}
th.endCol div,
td.endCol div,
.outerTable th.endCol div,
.outerTable td.endCol div{
    margin-right: 15px;
}

.dataTables_scrollBody{position:relative;}
/* expandable nested child table styles */
.dataTable td.childcontracts div {
    margin: 0px;
}
.dataTable td.childcontracts .jspPane table td div {
    margin: 13px 0 13px 5px;
}
.dataTable td.childcontracts .jspPane table td.number-left div {
     margin: 13px 0 13px 15px;
 }
.dataTable td.childcontracts .jspPane table td.number-scroll div {
    margin: 13px 0 13px 0px;
    text-align: center;
 }
.dataTable td.childcontracts .jspPane table td.text-left-padding-scroll div {
    margin: 13px 0 13px 20px;
}
td.vers-num div{margin-left:40px;}
.dataTable td.childcontracts .jspPane table td.vers-num div {
    margin: 13px 0px 13px 40px;
}
td.expander span.collapsed, td.expander span.expanded, td.expander span.loader, a.showHide, a.showHide.open, .assoc_item span.expanded , .assoc_item span.collapsed {
    display:block;
    height: 16px;
    width: 16px;
    margin:0px 10px 0px 4px;
    cursor: pointer;
    background: url("../images/open.png") no-repeat scroll right center transparent;
}
td.expander span.expanded, a.showHide, .assoc_item span.expanded {
    background: url("../images/close.png") no-repeat scroll right center transparent;
}
a.showHide, a.showHide.open, .assoc_item span.expanded , .assoc_item span.collapsed  {
    height:14px;
    width:14px;
    float:left;
    margin:0px 5px 0px 0px;
}
td.expander span.loader {
    background: url("../images/ajax-loader.gif") no-repeat scroll right center transparent;
}
.jspPane{margin-left:25px !important;}
.jspVerticalBar{
    background: none repeat scroll 0 0 red;
    height: 100%;
    position: absolute;
    top: 0px;
    left:0px;
    width: 16px;
}
.jspTrack {
    background: none repeat scroll 0 0 #EDEDED !important;
}
.jspDrag {
    background: linear-gradient(to right, #F3F3F3 0%, #BCBDC0 100%) repeat scroll 0 0 transparent;
    border: 1px solid #9E9E9E;
}
.jspArrow, .jspArrow.jspDisabled {
    background-color: #EDEDED;
}
.jspArrow.jspDisabled.jspActive, .jspArrow.jspActive {
    background-color: #6FCAF0;
    border: 1px solid #18598A;
}
.jspArrowUp, .jspArrowUp.jspDisabled {
    background-image: url("../images/arrow-up.png");
    background-position: center center;
    background-repeat: no-repeat;
}
.jspArrowDown, .jspArrowDown.jspDisabled {
    background-image: url("../images/arrow-down.png");
    background-position: center center;
    background-repeat: no-repeat;
}
table.dataTable td.childcontracts {
    padding: 0;
    position: relative;
}
td.childcontracts div.sub-table-wrapper {
    height: 200px;
    position: relative;
}
.jspScrollable .jspContainer {
    overflow: hidden;
    position: relative;
}
.jspScrollable .jspPane{position: absolute;}

/* Associated Contracts Tables*/
#assoc_contracts_list_wrapper{
    border:none;
}

#assoc_contracts_list_wrapper{
    margin-top:-10px;
}
#assoc_contracts_list_wrapper .panel-pane.pane-custom.pane-1 + .panel-separator{
    display:none;
}
#assoc_contracts_list_wrapper .panel-pane.pane-custom.pane-1{
    margin-bottom:0px;
}

#assoc_contracts_list_wrapper .contextual-links-region.panel-pane.pane-node,
#assoc_contracts_list_wrapper .contextual-links-region.panel-pane.pane-node .pane-content,
#assoc_contracts_list_wrapper .contextual-links-region.panel-pane.pane-node .content.clearfix{
    margin:0px;
}


#assoc_contracts_list_wrapper .contextual-links-region.panel-pane.pane-node .content.clearfix + .clearfix{
    display:none;
}

table#assoc_contracts_list {
    border: none;
    border-collapse: separate;
    border-spacing: 0 10px;
}
table#assoc_contracts_list > thead{
    display:none;
}
/* ... */

